{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 2,
  "lineage": "d1e040ae-a067-9e3b-09d5-9f95d8e76a4b",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "mtc_private_rt",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654302382:route-table/rtb-067383232878242ff",
            "default_route_table_id": "rtb-067383232878242ff",
            "id": "rtb-067383232878242ff",
            "owner_id": "654654302382",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mtc_private"
            },
            "tags_all": {
              "Name": "mtc_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db399b7b72517c7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mtc_internet_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654302382:internet-gateway/igw-049955aaafd13b12f",
            "id": "igw-049955aaafd13b12f",
            "owner_id": "654654302382",
            "tags": {
              "Name": "mtc_igw"
            },
            "tags_all": {
              "Name": "mtc_igw"
            },
            "vpc_id": "vpc-0db399b7b72517c7b"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-049955aaafd13b12f",
            "id": "r-rtb-04d5db83281d83d1d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d5db83281d83d1d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.mtc_internet_gateway",
            "module.networking.aws_route_table.mtc_public_rt",
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mtc_public_rt",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654302382:route-table/rtb-04d5db83281d83d1d",
            "id": "rtb-04d5db83281d83d1d",
            "owner_id": "654654302382",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049955aaafd13b12f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mtc_public"
            },
            "tags_all": {
              "Name": "mtc_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db399b7b72517c7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mtc_public_assoc",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eda4c4476e1e143",
            "route_table_id": "rtb-04d5db83281d83d1d",
            "subnet_id": "subnet-01e9ed1e14be278c0"
          },
          "dependencies": [
            "module.networking.aws_route_table.mtc_public_rt",
            "module.networking.aws_subnet.mtc_public_subnet",
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f86fba1930f2aa4",
            "route_table_id": "rtb-04d5db83281d83d1d",
            "subnet_id": "subnet-0b2ade83e42ae83b2"
          },
          "dependencies": [
            "module.networking.aws_route_table.mtc_public_rt",
            "module.networking.aws_subnet.mtc_public_subnet",
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mtc_sg",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654302382:security-group/sg-0df1ec8b951479c6c",
            "description": "public access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df1ec8b951479c6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "654654302382",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0db399b7b72517c7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": "rds",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654302382:security-group/sg-063149508d89ac7c1",
            "description": "rds access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063149508d89ac7c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.123.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "654654302382",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0db399b7b72517c7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_private_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654302382:subnet/subnet-0d2a85ee153d160c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.124.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2a85ee153d160c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654302382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_private_1"
            },
            "tags_all": {
              "Name": "mtc_private_1"
            },
            "vpc_id": "vpc-0db399b7b72517c7b"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654302382:subnet/subnet-07094c62b49930bf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.124.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07094c62b49930bf3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654302382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_private_2"
            },
            "tags_all": {
              "Name": "mtc_private_2"
            },
            "vpc_id": "vpc-0db399b7b72517c7b"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654302382:subnet/subnet-07888408ad43e32ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.124.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07888408ad43e32ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654302382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_private_3"
            },
            "tags_all": {
              "Name": "mtc_private_3"
            },
            "vpc_id": "vpc-0db399b7b72517c7b"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_public_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654302382:subnet/subnet-01e9ed1e14be278c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.124.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e9ed1e14be278c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654302382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_public_1"
            },
            "tags_all": {
              "Name": "mtc_public_1"
            },
            "vpc_id": "vpc-0db399b7b72517c7b"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654302382:subnet/subnet-0b2ade83e42ae83b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.124.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2ade83e42ae83b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654302382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_public_2"
            },
            "tags_all": {
              "Name": "mtc_public_2"
            },
            "vpc_id": "vpc-0db399b7b72517c7b"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mtc_vpc",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654302382:vpc/vpc-0db399b7b72517c7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.124.0.0/16",
            "default_network_acl_id": "acl-0d59eee27d6719b0d",
            "default_route_table_id": "rtb-067383232878242ff",
            "default_security_group_id": "sg-0ed697d30b1d843b7",
            "dhcp_options_id": "dopt-0ba08b30316ecde1d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db399b7b72517c7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-067383232878242ff",
            "owner_id": "654654302382",
            "tags": {
              "Name": "mtc_vpc-83"
            },
            "tags_all": {
              "Name": "mtc_vpc-83"
            }
          },
          "dependencies": [
            "module.networking.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}